# rays

./: .gitignore  Cargo.toml  README.md
assets/shaders/: compute.wgsl  shader.wgsl
src/: app.rs  camera.rs  globals.rs  main.rs  material.rs  math.rs  render_time.rs  scene.rs  sphere.rs  timer.rs  ui.rs
src/math/: mod.rs  ray.rs
src/renderer/: compute_pipeline.rs  image_util.rs  mod.rs  render.rs  render_pipeline.rs  sphere.rs
