[package]
name = "rays"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
pollster = "0.3.0"
env_logger = "0.10"
wgpu = "0.17.0"
winit = "0.28.6"
image = "0.24.7"
simple_logger = "4.2.0"
