[package]
name = "rays"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
pollster = "0.3.0"
wgpu = "0.16.0" # egui-wgpu needs 0.16
winit = "0.28.6"
image = "0.24.7"
simple_logger = "4.2.0"
glam = "0.24.1"
rayon = {version = "1.7.0", optional = true}
itertools = "0.11.0"
bytemuck = "1.14.0"
egui-wgpu = { version = "0.22.0", features = ["winit"] }
egui = "0.22.0"
egui-winit = "0.22.0"

[profile.release]
debug = true

[features]
rayon = ["dep:rayon"]
default = ["rayon"]
